--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "description": "Movie API with Graphql",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon",
-    "build": "npm run build:js && npm run build:mjs",
-    "build:js": "babel src --out-dir lib",
-    "build:mjs": "MODULE=true babel src --out-dir lib --keep-file-extension"
+    "start": "nodemon"
   },
   "author": "",
   "license": "ISC",
